Finish sections on setup and basics

--- a/0_Notebook_Basics.ipynb
+++ b/0_Notebook_Basics.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This means it is like vim in that there are different modes. There are less than vim, but there still exists arguably the two most important:\n",
+    "This means it is like vim in that there are different modes. There are less modes than in vim, but there still exists arguably the two most important:\n",
     "1. **Command Mode**\n",
     "2. **Edit Mode**\n",
     "\n",
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The most useful shortcuts\n",
+    "## Command Mode Shortcuts\n",
     "\n",
     "### Movement\n",
     "\n",
@@ -42,14 +42,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you type, you can use **Shift+Enter** to run the current cell and move to a new one, meaning if you are editing code it will run the code, or if it is markdown you will exit edit mode and all your markup will be displayed properly."
+    "As you type, you can use **Shift+Enter** to run the current cell and move to a new one, meaning if you are editing code it will run the code, or if it is markdown you will exit edit mode and all your markup will be displayed properly. Alternatively, **Ctrl+Enter** will do the same _without_ moving to the next cell for editing."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Command Mode Shortcuts "
+    "### Common Shortcuts "
    ]
   },
   {
@@ -87,7 +87,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Other useful Command Mode Shortcuts"
+    "### Other useful Command Mode Shortcuts\n",
+    "\n",
+    "1. **f** to find something\n",
+    "2. **p** for the command pallet (similar to editors like Sublime Text/VS Code)\n",
+    "3. **s** for save\n",
+    "4. **L** toggles line numbers\n",
+    "5. **o** hides output from running code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Edit Mode Shortcuts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the most part editing shortcuts act like most other text editors. However, there are a few that are unique to code editors that are also present."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Most useful\n",
+    "**Note: cmd (command) can be replaced with ctrl on windows/linux machines**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. **cmd+click** for multicursor editing\n",
+    "2. **cmd+/** to toggle comments. This works with your cursor anywhere on the line you want to comment and will work on all highlighted text as well\n",
+    "3. **tab** provides typical tab completion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DO NOT FORGET ABOUT H FOR A LIST OF ALL COMMANDS"
    ]
   }
  ],
