Update environment setup to use miniconda

--- a/00_Basic_Environment_Setup.ipynb
+++ b/00_Basic_Environment_Setup.ipynb
@@ -11,7 +11,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Install Anaconda to use the conda package manager. https://www.anaconda.com/\n",
+    "Anaconda is a bit of a pain to set up initially, and with recent upgrades it makes it hard to find answers to some issues. So, to streamline this a bit, we're going to use miniconda, which is gives us a python install to use as well as the conda command for package and environment management. Unlike the full Anaconda, it does not come preloaded with packages and instead lets you choose which you need via the `conda install` command."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Brief Aside \n",
+    "**Q: Why use Anaconda in the first place? Why not just use pip and virtualenv?**\n",
+    "A: Think of conda as a curated list of packages, with specific focus on the scientific computing community. When you install a package via `conda install`, instead of just installing the package (and dependencies), it will also install optimizations. Simply put, pandas installed via conda **will** run better than using pip. Do note, however, you can still use pip to install within a conda environment, and depending on the package may sometimes have to, usually for smaller modules."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setup Instructions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Install Miniconda to use the conda package manager. [Link here](https://docs.conda.io/en/latest/miniconda.html)\n",
     "2. Create new environment using conda"
    ]
   },
@@ -19,14 +42,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`conda create --name <env name> python=<version>`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "version will be in number, such as 3.7"
+    "`conda create --name <env name> python=<version>`\n",
+    "*version will be in number, such as 3.7"
    ]
   },
   {
@@ -116,6 +133,34 @@
    "metadata": {},
    "source": [
     "This can be done inside your environment or outside (globally). If you have jupyter running already, then restart it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Optional but not really Pt. 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Managing environments from within a notebook isn't easy by default. It used to come with the capability, but now it is a separate extension. So, to get this functionality, simply run the following in your environment:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`conda install nb_conda`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now in your notebook you will have a new tab on the home screen called _Conda_. You can use this to manage your environment easily."
    ]
   }
  ],
